fix(ui): header labels alignment

--- a/esthesis-ui/src/app/shared/layout/header.component.scss
+++ b/esthesis-ui/src/app/shared/layout/header.component.scss
@@ -21,7 +21,7 @@
     }
     .sub {
       position: relative;
-      top: -0.45rem;
+      top: -0.2rem;
       padding-left: 0.6rem;
     }
   }
